--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.4.2",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/filesystem": "^5.1.4",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
