--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-status-bar')
     implementation project(':capawesome-capacitor-file-picker')
+    implementation project(':whiteguru-capacitor-plugin-media-capture')
     implementation project(':whiteguru-capacitor-plugin-video-editor')
     implementation "androidx.webkit:webkit:1.4.0"
 }
