--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
+    "@capacitor/assets": "^3.0.1",
     "@capacitor/cli": "5.4.2",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
